refactor: convert `WeatherReport` and related models to records, enhance immutability, and streamline test usage
docs: add advanced development and test guidelines

refactor: replace synchronized blocks with `ReentrantLock` in `CitySearchService`, optimize imports, and improve readability